temp logo added/spacing fixed

--- a/src/components/login/style.scss
+++ b/src/components/login/style.scss
@@ -16,8 +16,8 @@
       .image {
         width: 21em;
         img {
-          width: 100%;
-          height: 100%;
+          width: 50%;
+          height: 50%;
         }
       }
   
